remove datetime, optimize tx
